API finished / Security added